[gd_scene load_steps=24 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/kenney_prototype_textures/orange/texture_06.png" type="Texture" id=2]
[ext_resource path="res://addons/terain.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]
[ext_resource path="res://Interface.tscn" type="PackedScene" id=5]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="VisualShaderNodeTexture" id=4]
texture = ExtResource( 2 )

[sub_resource type="VisualShaderNodeInput" id=5]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorOp" id=6]
default_input_values = [ 0, Vector3( 0, 0, 0 ), 1, Vector3( 60, 40, 1 ) ]
operator = 2

[sub_resource type="VisualShader" id=7]
code = "shader_type spatial;
render_mode specular_schlick_ggx;

uniform sampler2D tex_frg_2;



void vertex() {
// Output:0

}

void fragment() {
// Input:3
	vec3 n_out3p0 = vec3(UV, 0.0);

// VectorOp:4
	vec3 n_in4p1 = vec3(60.00000, 40.00000, 1.00000);
	vec3 n_out4p0 = n_out3p0 * n_in4p1;

// Texture:2
	vec4 tex_frg_2_read = texture(tex_frg_2, n_out4p0.xy);
	vec3 n_out2p0 = tex_frg_2_read.rgb;
	float n_out2p1 = tex_frg_2_read.a;

// Output:0
	ALBEDO = n_out2p0;

}

void light() {
// Output:0

}
"
nodes/fragment/2/node = SubResource( 4 )
nodes/fragment/2/position = Vector2( 80, 200 )
nodes/fragment/3/node = SubResource( 5 )
nodes/fragment/3/position = Vector2( -300, 240 )
nodes/fragment/4/node = SubResource( 6 )
nodes/fragment/4/position = Vector2( -120, 260 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0, 3, 0, 4, 0, 4, 0, 2, 0 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="BoxShape" id=9]

[sub_resource type="CubeMesh" id=12]

[sub_resource type="SpatialMaterial" id=14]
albedo_color = Color( 0.92549, 0.0784314, 0.0784314, 1 )

[sub_resource type="BoxShape" id=13]

[sub_resource type="SphereShape" id=17]
radius = 19.9733

[sub_resource type="CapsuleShape" id=15]
height = 1.00153

[sub_resource type="CapsuleMesh" id=16]

[sub_resource type="SphereShape" id=18]
radius = 4.79367

[sub_resource type="ProceduralSky" id=10]
sky_top_color = Color( 0.294118, 0.733333, 0.976471, 1 )
sky_horizon_color = Color( 0.392157, 0.576471, 0.72549, 1 )
ground_bottom_color = Color( 0.239216, 0.431373, 0.309804, 1 )
ground_horizon_color = Color( 0.345098, 0.552941, 0.584314, 1 )

[sub_resource type="Environment" id=11]
background_mode = 2
background_sky = SubResource( 10 )

[node name="Main" type="Spatial"]

[node name="teren" type="Node" parent="."]

[node name="neutralny" type="Node" parent="teren"]

[node name="MeshInstance2" type="MeshInstance" parent="teren/neutralny"]
transform = Transform( 1, 0, 0, 0, 32.8456, 0, 0, 0, 16.7437, 0, 25.5761, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="teren/neutralny/MeshInstance2"]

[node name="CollisionShape" type="CollisionShape" parent="teren/neutralny/MeshInstance2/StaticBody"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="teren/neutralny"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 100, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 8 )

[node name="StaticBody" type="StaticBody" parent="teren/neutralny/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="teren/neutralny/MeshInstance/StaticBody"]
shape = SubResource( 9 )

[node name="test" type="MeshInstance" parent="teren/neutralny"]
transform = Transform( -1.62921e-07, -8.83028, 0, 1, -1.43864e-06, 0, 0, 0, 16.7437, -22.3771, 3.90819, 25.3897 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="teren/neutralny/test"]

[node name="CollisionShape" type="CollisionShape" parent="teren/neutralny/test/StaticBody"]
shape = SubResource( 2 )

[node name="test2" type="MeshInstance" parent="teren/neutralny"]
transform = Transform( 0.219662, -8.59267, -1.16514, 0.971997, 1.98154, -1.16798, 0.0834948, -0.461957, 16.6622, -22.6454, 7.22853, 59.2144 )
mesh = SubResource( 1 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="teren/neutralny/test2"]

[node name="CollisionShape" type="CollisionShape" parent="teren/neutralny/test2/StaticBody"]
shape = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="teren/neutralny"]
transform = Transform( 12.0706, 0, 0, 0, 1, 0, 0, 0, 11.3144, 177.767, 5.93741, -1.57557 )
mesh = SubResource( 12 )
material/0 = SubResource( 14 )

[node name="StaticBody" type="StaticBody" parent="teren/neutralny/MeshInstance3"]

[node name="CollisionShape" type="CollisionShape" parent="teren/neutralny/MeshInstance3/StaticBody"]
shape = SubResource( 13 )

[node name="MeshInstance4" type="MeshInstance" parent="teren/neutralny"]
transform = Transform( 16.9267, 0, 0, 0, 1, 0, 0, 0, 3.91935, 139.619, 5.93741, -1.57557 )
mesh = SubResource( 12 )
material/0 = SubResource( 14 )

[node name="StaticBody" type="StaticBody" parent="teren/neutralny/MeshInstance4"]

[node name="CollisionShape" type="CollisionShape" parent="teren/neutralny/MeshInstance4/StaticBody"]
shape = SubResource( 13 )

[node name="terain" parent="teren/neutralny" instance=ExtResource( 3 )]
transform = Transform( -3.25841e-07, 0, 2, 0, 2, 0, -2, 0, -3.25841e-07, -149.039, 0.494755, -3.07706 )

[node name="wrogi" type="Node" parent="teren"]

[node name="Enemy" type="KinematicBody" parent="teren/wrogi"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 179.035, 7.77445, -1.97414 )
script = ExtResource( 4 )

[node name="Area" type="Area" parent="teren/wrogi/Enemy"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2103, 0 )

[node name="CollisionShape" type="CollisionShape" parent="teren/wrogi/Enemy/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0941544, 3.8147e-06, 0.0172787 )
shape = SubResource( 17 )

[node name="CollisionShape" type="CollisionShape" parent="teren/wrogi/Enemy"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.02011, 0 )
shape = SubResource( 15 )

[node name="MeshInstance" type="MeshInstance" parent="teren/wrogi/Enemy/CollisionShape"]
mesh = SubResource( 16 )
material/0 = null

[node name="DemageArea" type="Area" parent="teren/wrogi/Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="teren/wrogi/Enemy/DemageArea"]
shape = SubResource( 18 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, -1.18786e-05, 1.64302e-06, 8.377e-06, 0.790019, 0.613083, -8.58057e-06, -0.613083, 0.790019, 17.4514, 99.4523, 5.93136 )
light_color = Color( 0.87451, 0.639216, 0.87451, 1 )
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 11 )

[node name="Player" parent="." groups=[
"player",
] instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29.5399, 5.62521, -0.0777926 )

[node name="Interface" parent="Player" instance=ExtResource( 5 )]

[connection signal="body_entered" from="teren/wrogi/Enemy/Area" to="teren/wrogi/Enemy" method="_on_Area_body_entered"]
[connection signal="body_exited" from="teren/wrogi/Enemy/Area" to="teren/wrogi/Enemy" method="_on_Area_body_exited"]
[connection signal="body_entered" from="teren/wrogi/Enemy/DemageArea" to="teren/wrogi/Enemy" method="_on_DemageArea_body_entered"]
[connection signal="body_exited" from="teren/wrogi/Enemy/DemageArea" to="teren/wrogi/Enemy" method="_on_DemageArea_body_exited"]
